tests/fixtures/invalid/pow_none_float_list.py
# Cannot call pow() with None, Float, List[int]
x = pow(None, 1.0, [1, 2, 3])
